fixed slider items on mobile view

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -133,3 +133,7 @@ flex-direction:column;
     width: calc(95% - var(--grid-mobile-horizontal-spacing) - 3rem) !important;
   }
  }
+
+ body.cart .cart-icon-bubble{
+  display: none;
+ }
